[package]
name = "acman"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.5.60", features = ["derive"] }
flate2 = "1.1.9"
reqwest = { version = "0.13.2", default-features = false, features = ["json", "rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
tar = "0.4.44"
tempfile = "3.26.0"
tokio = { version = "1.49.0", features = ["full"] }
toml = "1.0.3"
